# shortlink

./: .gitignore  Cargo.toml  LICENSE  README.md
server/: Cargo.toml  docker-compose.yaml
server/migrations/2022-02-23-230009_create_users/: up.sql
server/migrations/2022-02-23-230012_create_link/: up.sql
server/src/: lib.rs  schema.rs
server/src/apps/: server.rs
server/src/diesel_impl/: user.rs
server/src/entity/: error.rs  link.rs  mod.rs  user.rs
server/src/handlers/: accounts.rs  health.rs  link.rs  mod.rs
server/src/infra/: mod.rs  postgres.rs
server/src/postgres_impl/: link.rs  mod.rs  user.rs
server/src/services/: link.rs  mod.rs  security.rs
server/src/utils/: password.rs
src/: lib.rs
src/handlers/: health.rs
web/: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
web/src/: lib.rs  main.rs
web/static/: index.html  index.ts
