[package]
name = "shortlink-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.6.1"
lazy_static = "1.4.0"
log = "0.4.14"
parking_lot = "0.12.0"
pulldown-cmark = "0.9.1"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0.136"
thiserror = "1.0.30"
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.46"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.56"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dev-dependencies]
js-sys = "0.3.56"
wasm-bindgen-futures = "0.4.29"
wasm-bindgen-test = "0.3.29"
gloo-utils = "0.1.2"
